// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render list widget 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth"
  >
    <div
      class="makeStyles-propertySectionLabel-5"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-8 MuiTypography-subtitle2"
      >
        myList
      </h6>
    </div>
    <table
      class="MuiTable-root"
      data-testid="table-myList"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-cell-1 MuiTableCell-sizeSmall"
          >
            <p
              class="MuiTypography-root makeStyles-canBeSelectedItem-2 makeStyles-style-3 makeStyles-style-4 MuiTypography-body1 MuiTypography-colorTextPrimary"
              data-testid="representation-item1Label"
            >
              item1Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              data-testid="delete-representation-item1Label"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-cell-1 MuiTableCell-sizeSmall"
          >
            <p
              class="MuiTypography-root makeStyles-canBeSelectedItem-2 makeStyles-style-3 makeStyles-style-4 MuiTypography-body1 MuiTypography-colorTextPrimary"
              data-testid="representation-item2Label"
            >
              item2Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              data-testid="delete-representation-item2Label"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-cell-1 MuiTableCell-sizeSmall"
          >
            <p
              class="MuiTypography-root makeStyles-canBeSelectedItem-2 makeStyles-style-3 makeStyles-style-4 MuiTypography-body1 MuiTypography-colorTextPrimary"
              data-testid="representation-item3Label"
            >
              item3Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              data-testid="delete-representation-item3Label"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`render list widget with help hint 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth"
  >
    <div
      class="makeStyles-propertySectionLabel-29"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-32 MuiTypography-subtitle2"
      >
        myList
      </h6>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-colorSecondary"
        focusable="false"
        style="margin-left: 8px; font-size: 16px;"
        title=""
        viewBox="0 0 24 24"
      >
        <path
          d="M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z"
        />
      </svg>
    </div>
    <table
      class="MuiTable-root"
      data-testid="table-myList"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-cell-25 MuiTableCell-sizeSmall"
          >
            <p
              class="MuiTypography-root makeStyles-canBeSelectedItem-26 makeStyles-style-27 makeStyles-style-28 MuiTypography-body1 MuiTypography-colorTextPrimary"
              data-testid="representation-item1Label"
            >
              item1Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              data-testid="delete-representation-item1Label"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-cell-25 MuiTableCell-sizeSmall"
          >
            <p
              class="MuiTypography-root makeStyles-canBeSelectedItem-26 makeStyles-style-27 makeStyles-style-28 MuiTypography-body1 MuiTypography-colorTextPrimary"
              data-testid="representation-item2Label"
            >
              item2Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              data-testid="delete-representation-item2Label"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-cell-25 MuiTableCell-sizeSmall"
          >
            <p
              class="MuiTypography-root makeStyles-canBeSelectedItem-26 makeStyles-style-27 makeStyles-style-28 MuiTypography-body1 MuiTypography-colorTextPrimary"
              data-testid="representation-item3Label"
            >
              item3Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              data-testid="delete-representation-item3Label"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`render list widget with style 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth"
  >
    <div
      class="makeStyles-propertySectionLabel-13"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-16 MuiTypography-subtitle2"
      >
        myList
      </h6>
    </div>
    <table
      class="MuiTable-root"
      data-testid="table-myList"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-cell-9 MuiTableCell-sizeSmall"
          >
            <p
              class="MuiTypography-root makeStyles-canBeSelectedItem-10 makeStyles-style-11 makeStyles-style-12 MuiTypography-body1 MuiTypography-colorTextPrimary"
              data-testid="representation-item1Label"
            >
              item1Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              data-testid="delete-representation-item1Label"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-cell-9 MuiTableCell-sizeSmall"
          >
            <p
              class="MuiTypography-root makeStyles-canBeSelectedItem-10 makeStyles-style-11 makeStyles-style-12 MuiTypography-body1 MuiTypography-colorTextPrimary"
              data-testid="representation-item2Label"
            >
              item2Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              data-testid="delete-representation-item2Label"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-cell-9 MuiTableCell-sizeSmall"
          >
            <p
              class="MuiTypography-root makeStyles-canBeSelectedItem-10 makeStyles-style-11 makeStyles-style-12 MuiTypography-body1 MuiTypography-colorTextPrimary"
              data-testid="representation-item3Label"
            >
              item3Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              data-testid="delete-representation-item3Label"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should render a readOnly list from widget properties 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth"
  >
    <div
      class="makeStyles-propertySectionLabel-37"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-40 MuiTypography-subtitle2"
      >
        myList
      </h6>
    </div>
    <table
      class="MuiTable-root"
      data-testid="table-myList"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-cell-33 MuiTableCell-sizeSmall"
          >
            <p
              class="MuiTypography-root  makeStyles-style-35 makeStyles-style-36 MuiTypography-body1 MuiTypography-colorTextPrimary"
              data-testid="representation-item1Label"
            >
              item1Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root Mui-disabled MuiIconButton-sizeSmall Mui-disabled"
              data-testid="delete-representation-item1Label"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </span>
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-cell-33 MuiTableCell-sizeSmall"
          >
            <p
              class="MuiTypography-root  makeStyles-style-35 makeStyles-style-36 MuiTypography-body1 MuiTypography-colorTextPrimary"
              data-testid="representation-item2Label"
            >
              item2Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root Mui-disabled MuiIconButton-sizeSmall Mui-disabled"
              data-testid="delete-representation-item2Label"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </span>
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-cell-33 MuiTableCell-sizeSmall"
          >
            <p
              class="MuiTypography-root  makeStyles-style-35 makeStyles-style-36 MuiTypography-body1 MuiTypography-colorTextPrimary"
              data-testid="representation-item3Label"
            >
              item3Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root Mui-disabled MuiIconButton-sizeSmall Mui-disabled"
              data-testid="delete-representation-item3Label"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </span>
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should the click event sent on item click 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth"
  >
    <div
      class="makeStyles-propertySectionLabel-21"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-24 MuiTypography-subtitle2"
      >
        myList
      </h6>
    </div>
    <table
      class="MuiTable-root"
      data-testid="table-myList"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-cell-17 MuiTableCell-sizeSmall"
          >
            <p
              class="MuiTypography-root makeStyles-canBeSelectedItem-18 makeStyles-style-19 makeStyles-style-20 MuiTypography-body1 MuiTypography-colorTextPrimary"
              data-testid="representation-item1Label"
            >
              item1Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              data-testid="delete-representation-item1Label"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-cell-17 MuiTableCell-sizeSmall"
          >
            <p
              class="MuiTypography-root makeStyles-canBeSelectedItem-18 makeStyles-style-19 makeStyles-style-20 MuiTypography-body1 MuiTypography-colorTextPrimary"
              data-testid="representation-item2Label"
            >
              item2Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              data-testid="delete-representation-item2Label"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-cell-17 MuiTableCell-sizeSmall"
          >
            <p
              class="MuiTypography-root makeStyles-canBeSelectedItem-18 makeStyles-style-19 makeStyles-style-20 MuiTypography-body1 MuiTypography-colorTextPrimary"
              data-testid="representation-item3Label"
            >
              item3Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              data-testid="delete-representation-item3Label"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;

exports[`should the click event sent on item click 2`] = `
<div>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth"
  >
    <div
      class="makeStyles-propertySectionLabel-21"
    >
      <h6
        class="MuiTypography-root makeStyles-typography-24 MuiTypography-subtitle2"
      >
        myList
      </h6>
    </div>
    <table
      class="MuiTable-root"
      data-testid="table-myList"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-cell-17 MuiTableCell-sizeSmall"
          >
            <p
              class="MuiTypography-root makeStyles-canBeSelectedItem-18 makeStyles-style-19 makeStyles-style-20 MuiTypography-body1 MuiTypography-colorTextPrimary"
              data-testid="representation-item1Label"
            >
              item1Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              data-testid="delete-representation-item1Label"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-cell-17 MuiTableCell-sizeSmall"
          >
            <p
              class="MuiTypography-root makeStyles-canBeSelectedItem-18 makeStyles-style-19 makeStyles-style-20 MuiTypography-body1 MuiTypography-colorTextPrimary"
              data-testid="representation-item2Label"
            >
              item2Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              data-testid="delete-representation-item2Label"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body makeStyles-cell-17 MuiTableCell-sizeSmall"
          >
            <p
              class="MuiTypography-root makeStyles-canBeSelectedItem-18 makeStyles-style-19 makeStyles-style-20 MuiTypography-body1 MuiTypography-colorTextPrimary"
              data-testid="representation-item3Label"
            >
              item3Label
            </p>
            <button
              aria-label="deleteListItem"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
              data-testid="delete-representation-item3Label"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <p
      class="MuiFormHelperText-root"
    />
  </div>
</div>
`;
